modif for render partial

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -19,7 +19,7 @@
 							</thead>
 							<tbody>
 								<% @items.each do |item| %>
-									<%= render partial: "administration/items/table_row", locals: {item: item} %>
+									<%= render partial: "/items/table_row", locals: {item: item} %>
 								<% end %>
 							</tbody>
 						</table>
