add config for dashboard profile users

--- a/app/views/layouts/administration/_sidebar.html.erb
+++ b/app/views/layouts/administration/_sidebar.html.erb
@@ -31,6 +31,13 @@
           </span>
 				<% end %>
 			</li>
+			<li class="sidebar-item">
+		    <%= link_to administration_profiles_path, class: "sidebar-link" do %>
+          <span class="align-middle">
+          	Manage Users
+          </span>
+				<% end %>
+			</li>
 			<% else %>
 			<li class="sidebar-item">
 				<%= link_to new_admin_session_path, class: "sidebar-link" do %>
