--- a/app/views/administration/profiles/index.html.erb
+++ b/app/views/administration/profiles/index.html.erb
@@ -1,12 +1,6 @@
 <main class="content">
 	<div class="container-fluid p-0">
-
-		<h1 class="h3 mb-3">Items</h1>
-
-		<h3>Emails</h3>
-		<% @emails.each do |email| %>
-			<%= link_to( email , administration_profiles_path ) %><br>
-		<% end %>
+		<h1 class="h3 mb-3">Les utilisateurs</h1>
 
 		<div class="row">
 			<div class="col-12">
@@ -16,16 +10,20 @@
 						<table class="table table-striped table-hover">
 							<thead>
 								<tr>
-									<th>Prix de départ</th>
-									<th>Pourcentage de remise</th>
-									<th>Prix</th>
+									<th>Envoyé à</th>
+									<th>Contenu</th>
+									<th>Envoyer</th>
 									<th></th>
 								</tr>
 							</thead>
 							<tbody>
-								<% @items.each do |item| %>
-									<%= render partial: "administration/items/table_row", locals: {item: item} %>
-								<% end %>
+								<% @emails.each do |email| %>
+									<tr>
+										<td><%= email %></td>
+										<td><p>some text</p></td>
+										<td><button type="button" class="btn btn-primary btn-outline">send email</button></td>
+									</tr>
+								<%end%>
 							</tbody>
 						</table>
 					</div>
@@ -33,6 +31,5 @@
 
 			</div>
 		</div>
-
 	</div>
 </main>
